chore: fix the spelling of some grammar categories

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4514,9 +4514,10 @@
   "grammarCopyPUNCTTYPEperi": "Period",
   "grammarCopyREFLEXyes": "Reflexive",
   "grammarCopyTENSEimp": "Imperfect",
-  "grammarCopyVERBFORMsup": "SuApine",
+  "grammarCopyVERBFORMsup": "Supine",
   "grammarCopyVERBFORMadn": "Adnominal",
   "grammarCopyVERBFORMlng": "Long",
+  "grammarCopyVERBFORMshrt": "Short",
   "grammarCopyVERBTYPEcaus": "Causative Verb",
   "grammarCopyVOICEcau": "Causative",
   "grammarCopyVOICEdir": "Direct",
