--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5037,5 +5037,28 @@
   "noSavedActivities": "No saved activities",
   "saveActivity": "Save this activity",
   "yourSavedActivities": "Saved Activities",
-  "failedToPlayVideo": "Failed to play video"
+  "failedToPlayVideo": "Failed to play video",
+  "done": "Done",
+  "inThisSpace": "In this space",
+  "myContacts": "My contacts",
+  "inviteAllInSpace": "Invite all in this space",
+  "spaceParticipantsHaveBeenInvitedToTheChat": "All space participants has been invited to the chat",
+  "numKnocking": "{count} knocking",
+  "@numKnocking": {
+    "type": "String",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
+  "numInvited": "{count} invited",
+  "@numInvited": {
+    "type": "String",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  }
 }
