chore: add more specific error messages

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5061,5 +5061,9 @@
       }
     }
   },
-  "saved": "Saved"
+  "saved": "Saved",
+  "reset": "Reset",
+  "errorGenerateActivityMessage": "Failed to generate activity",
+  "errorRegenerateActivityMessage": "Failed to regenerate activity",
+  "errorFetchingActivitiesMessage": "Failed to fetch activities"
 }
