--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5070,5 +5070,8 @@
   "errorProcessAnalytics": "Failed to process analytics",
   "errorDownloading": "Download failed",
   "errorFetchingLevelSummary": "Failed to fetch level summary",
-  "errorLoadingSpaceChildren": "Failed to load chats within this space"
+  "errorLoadingSpaceChildren": "Failed to load chats within this space",
+  "unexpectedError": "Unexpected error.",
+  "pleaseReload": "Please reload and try again.",
+  "translationError": "Translation error"
 }
