--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5073,5 +5073,7 @@
   "errorLoadingSpaceChildren": "Failed to load chats within this space",
   "unexpectedError": "Unexpected error.",
   "pleaseReload": "Please reload and try again.",
-  "translationError": "Translation error"
+  "translationError": "Translation error",
+  "errorFetchingTranslation": "Failed to fetch translation",
+  "errorFetchingActivity": "Failed to fetch activity"
 }
