chore: make IGC button more prominent and added tooltip, set auto-IGC false by default

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5091,5 +5091,6 @@
   "pleaseReload": "Please reload and try again.",
   "translationError": "Translation error",
   "errorFetchingTranslation": "Failed to fetch translation",
-  "errorFetchingActivity": "Failed to fetch activity"
+  "errorFetchingActivity": "Failed to fetch activity",
+  "check": "Check"
 }
