Used preexisting setup for more efficient implementation

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5092,6 +5092,5 @@
   "translationError": "Translation error",
   "errorFetchingTranslation": "Failed to fetch translation",
   "errorFetchingActivity": "Failed to fetch activity",
-  "check": "Check",
-  "selectActivityButton": "Select Activity"
+  "check": "Check"
 }
