some adjustments to join activity widget

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5107,6 +5107,7 @@
     }
   },
   "unjoinedActivityMessage": "Do you want to participate? Choose an open role!\nOr hang out and watch the show!",
+  "fullActivityMessage": "Feel free to watch the show! While there aren't any open roles to participate, you can view the chat!",
   "confirmRole": "Confirm role",
   "openRoleLabel": "OPEN",
   "joinedTheActivity": "👋 {username} joined as {role}",
