chore: add pinned activity message / ability to finish an activity

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5121,5 +5121,16 @@
         "type": "String"
       }
     }
-  }
+  },
+  "finishedTheActivity": "🎯 {username} wrapped up this activity",
+  "@finishedTheActivity": {
+    "type": "String",
+    "placeholders": {
+      "username": {
+        "type": "String"
+      }
+    }
+  },
+  "endActivityTitle": "Wrapped up my part",
+  "endActivityDesc": "Did you complete the objectives?\nThis is your confirmation that you're stepping back from texting. But don’t worry, the fun continues in the chat! Feel free to hang out and enjoy the show until everyone clicks 'Done'."
 }
