--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -2437,7 +2437,7 @@
   },
   "pinMessage": "Pin to room",
   "@pinMessage": {},
-  "confirmEventUnpin": "Are you sure you want to unpin this message?",
+  "confirmEventUnpin": "Are you sure to permanently unpin the event?",
   "@confirmEventUnpin": {},
   "emojis": "Emojis",
   "@emojis": {},
@@ -5092,5 +5092,6 @@
   "errorFetchingTranslation": "Failed to fetch translation",
   "errorFetchingActivity": "Failed to fetch activity",
   "check": "Check",
-  "unableToFindRoom": "No chat or space found with that code. Please try again."
+  "unableToFindRoom": "No chat or space found with that code. Please try again.",
+  "confirmMessageUnpin": "Are you sure you want to unpin this message?"
 }
