added service for storing download status, started adding functionality for buttons on space analytics page

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5106,5 +5106,17 @@
         "type": "int"
       }
     }
-  }
+  },
+  "request": "Request",
+  "requestCount": "Request {count}",
+  "@requestCount": {
+    "type": "String",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
+  "pending": "Pending",
+  "inactive": "Inactive"
 }
