Added activity message when generation is partially successful

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5092,5 +5092,6 @@
   "errorFetchingTranslation": "Failed to fetch translation",
   "errorFetchingActivity": "Failed to fetch activity",
   "check": "Check",
-  "unableToFindRoom": "No chat or space found with that code. Please try again."
+  "unableToFindRoom": "No chat or space found with that code. Please try again.",
+  "generatingNewActivities": "You're the first user of this language pair! Please wait a moment, we're preparing activities just for you."
 }
