requesting user popups

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5163,5 +5163,18 @@
   "archiveToAnalytics": "Add to my Completed Activities",
   "activitySummaryError": "Activity summaries unavailable",
   "requestSummaries": "Request summaries",
-  "loadingActivitySummary": "Loading activity summary..."
+  "loadingActivitySummary": "Loading activity summary...",
+  "requestAccessTitle": "Request to analytics view access?",
+  "requestAccessDesc": "Would you like to request access to view participant analytics?\n\nIf participants agree, admin of this space will be able to view their:\n    • total vocabulary\n    • total grammar concepts\n    • total activity sessions completed\n    • the specific grammar concepts used, correctly and incorrectly\n\n    • They will not be able to view their:\n    • messages in chats outside the space\n    • vocabulary list",
+  "requestAccess": "Request access ({count})",
+  "@requestAccess": {
+    "type": "String",
+    "placeholders": {
+      "count": {
+        "type": "int"
+      }
+    }
+  },
+  "analyticsInactiveTitle": "Requests to inactive users couldn’t be sent",
+  "analyticsInactiveDesc": "Inactive users who haven't logged in since this feature was introduced won't see your request.\n\nThe Request button will appear once they return. You can resend the request later by clicking the Request button under their name when it's available."
 }
